--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,12 @@ name: Publish Hugo Site
 on:
   push:
     branches:
-      - main
+      - master
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   update_hugo_npm_dependencies:
@@ -57,6 +62,10 @@ jobs:
           fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
           ref: ${{ needs.update_hugo_npm_dependencies.outputs.commit_hash }}
 
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v3
+
       - name: Install Node
         uses: actions/setup-node@v4
         with:
@@ -74,11 +83,19 @@ jobs:
       - name: Build Hugo
         run: hugo --minify
 
-      - name: Deploy to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: hugo-theme-gruvbox
-          directory: ./public
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          path: ./public
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: publish
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v3
